# codesoc-db

./: .gitignore  MODULE.bazel  README.md
.github/workflows/: build.yml
src/index/: BUILD.bazel  README.md  inverted_index.hpp
src/model/: BUILD.bazel  README.md
src/query/: BUILD.bazel  README.md
src/query/lexer/: BUILD.bazel
src/storage/: BUILD.bazel  README.md
src/storage/structures/: BUILD.bazel
src/storage/structures/btree/: BUILD.bazel  btree  btree.cpp  example_test.cpp
